--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.17
   percent_indicator: ^4.2.4
+  dio: ^5.8.0+1
+  flutter_bloc: ^9.0.0
+  flutter_offline: ^4.0.0
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
